Styles & fixes on mobile screens

--- a/src/components/Comments/AddComment/AddComment.module.css
+++ b/src/components/Comments/AddComment/AddComment.module.css
@@ -38,6 +38,12 @@
     &:active {
         transform: translateY(0);
     }
+
+    @media (max-width: $mantine-breakpoint-md) {
+        &:active {
+            transform: translateY(rem(-2px));
+        }
+    }
 }
 
 .avatar {
